Feature/refactor connection and job with cmd pattern (#350)
* Add boundary for generated path.

* Set default machine work area to canvas size when no machine settings exists.

* Add warning popup for items not placed fully inside the working area

* Fix transform bug

* Add translations

* Refine CMakeLists.txt

* Use target_sources() in CMakeLists.txt

* Rename gcode player as gcode panel

* Rename gcode player to gcode panel

* Remove temp files

* Milestone 1

* Milestone 2 (Temporary add back motion_controller_job)

* swiftray release (#336)

* Fix image crop selection rect coordinate transform bug (#140)

* Add moving speed 4800 feedrate

* Fix moving speed (#143)

* Allow importing images with open file button

* Adjust preset manager UI and support change preset

* Support scale lock when directly change spinbox

* Support showing Custom on the presetm

* Add minus icon and fix scale block position bug

* Add dialog title to some ui file

* Fix color blending for image (#149)

* Fix one dimension control point scale lock bug

* Remove the point showing in the middle of bbox

* Hide flux advanced options on doc panel

* Use Swiftray as the only application title

* Fix transform panel and toolbar showing 9999 bug

* Fix 2nd quadrant rotataion reset bug

* Fix rect creation crash bug

* Prevent wrong baud rate and port setting crash

* Refine bitmap raster algorithm (ignore white/transparent background)

* Fix incorrect dpi value

* Fix dpmm settings not apply for preview

* Set dpmm in ctor of ToolpathExporter

* Make indentation aligned

* build-for-windows-clipper-potrace

* Add import boost thread & opencv for Windows

* Build for windows: remove namespace std

* Hide tests

* Fix undefined reference to __imp_WSAXXXX

* Add boost library for MinGW

* Fix std namespace issue

* Refine CMakeLists.txt

* Separate Windows and MacOS config for CMake

* Let app name start w

--- a/src/widgets/panels/jogging-panel.ui
+++ b/src/widgets/panels/jogging-panel.ui
@@ -120,6 +120,9 @@
            <property name="decimals">
             <number>1</number>
            </property>
+           <property name="maximum">
+            <double>999999.000000000000000</double>
+           </property>
           </widget>
          </item>
          <item row="0" column="2">
@@ -167,6 +170,9 @@
            </property>
            <property name="decimals">
             <number>1</number>
+           </property>
+           <property name="maximum">
+            <double>999999.000000000000000</double>
            </property>
           </widget>
          </item>
@@ -228,6 +234,9 @@
            <property name="decimals">
             <number>1</number>
            </property>
+           <property name="maximum">
+            <double>999999.000000000000000</double>
+           </property>
           </widget>
          </item>
          <item row="0" column="2">
@@ -269,6 +278,9 @@
            </property>
            <property name="decimals">
             <number>1</number>
+           </property>
+           <property name="maximum">
+            <double>999999.000000000000000</double>
            </property>
           </widget>
          </item>
@@ -328,6 +340,9 @@
            <property name="singleStep">
             <double>0.100000000000000</double>
            </property>
+           <property name="value">
+            <double>30.000000000000000</double>
+           </property>
           </widget>
          </item>
          <item row="1" column="2">
@@ -364,8 +379,14 @@
            <property name="decimals">
             <number>1</number>
            </property>
+           <property name="maximum">
+            <double>10.000000000000000</double>
+           </property>
            <property name="singleStep">
             <double>0.100000000000000</double>
+           </property>
+           <property name="value">
+            <double>2.000000000000000</double>
            </property>
           </widget>
          </item>
