--- a/src/widgets/panels/laser-panel.ui
+++ b/src/widgets/panels/laser-panel.ui
@@ -139,7 +139,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="toOriginBtn">
+          <widget class="QPushButton" name="moveToOriginBtn">
            <property name="text">
             <string>Go to Origin</string>
            </property>
@@ -157,18 +157,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QComboBox" name="comboBox">
-           <item>
-            <property name="text">
-             <string>Absolute Coords</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Current Position</string>
-            </property>
-           </item>
-          </widget>
+          <widget class="QComboBox" name="startFromComboBox"/>
          </item>
         </layout>
        </item>
