--- a/src/windows/rotary_setup.ui
+++ b/src/windows/rotary_setup.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>463</width>
-    <height>443</height>
+    <height>483</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -66,14 +66,14 @@
        </property>
        <property name="minimumSize">
         <size>
-         <width>302</width>
-         <height>110</height>
+         <width>436</width>
+         <height>150</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>16777215</width>
-         <height>110</height>
+         <height>150</height>
         </size>
        </property>
        <property name="showDropIndicator" stdset="0">
@@ -81,8 +81,8 @@
        </property>
        <property name="iconSize">
         <size>
-         <width>80</width>
-         <height>80</height>
+         <width>200</width>
+         <height>140</height>
         </size>
        </property>
        <property name="movement">
@@ -99,8 +99,8 @@
        </property>
        <property name="gridSize">
         <size>
-         <width>150</width>
-         <height>100</height>
+         <width>216</width>
+         <height>140</height>
         </size>
        </property>
        <property name="selectionRectVisible">
@@ -156,20 +156,6 @@
    </item>
    <item>
     <layout class="QGridLayout" name="gridLayout_2">
-     <item row="3" column="0">
-      <widget class="QLabel" name="label_7">
-       <property name="text">
-        <string>Roller Diameter</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="2">
-      <widget class="QLabel" name="label_6">
-       <property name="text">
-        <string>Object Diameter</string>
-       </property>
-      </widget>
-     </item>
      <item row="2" column="3">
       <widget class="QDoubleSpinBox" name="ObjectSpinBox">
        <property name="suffix">
@@ -205,6 +191,13 @@
        </property>
       </widget>
      </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_5">
+       <property name="text">
+        <string>mm per Rotation</string>
+       </property>
+      </widget>
+     </item>
      <item row="2" column="1">
       <widget class="QDoubleSpinBox" name="mmPerRotationSpinBox">
        <property name="suffix">
@@ -220,7 +213,21 @@
         <double>0.100000000000000</double>
        </property>
        <property name="value">
-        <double>55.399999999999999</double>
+        <double>55.000000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_7">
+       <property name="text">
+        <string>Roller Diameter</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="2">
+      <widget class="QLabel" name="label_6">
+       <property name="text">
+        <string>Object Diameter</string>
        </property>
       </widget>
      </item>
@@ -240,19 +247,25 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="label_5">
-       <property name="text">
-        <string>mm per Rotation</string>
-       </property>
-      </widget>
-     </item>
      <item row="3" column="2">
       <widget class="QLabel" name="label_8">
        <property name="text">
         <string>Circumference</string>
        </property>
       </widget>
+     </item>
+     <item row="2" column="4">
+      <spacer name="horizontalSpacer_4">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </item>
