Modify Check for updates button text

--- a/src/windows/mainwindow.ui
+++ b/src/windows/mainwindow.ui
@@ -741,7 +741,7 @@
      <string>&amp;Help</string>
     </property>
     <addaction name="actionAbout"/>
-    <addaction name="actionCheck_Update"/>
+    <addaction name="actionCheckForUpdates"/>
    </widget>
    <widget class="QMenu" name="menu_Window">
     <property name="title">
@@ -781,8 +781,8 @@
    </widget>
    <addaction name="menu_File"/>
    <addaction name="menu_Edit"/>
-   <addaction name="menu_Help"/>
    <addaction name="menu_Window"/>
+   <addaction name="menu_Help"/>
   </widget>
   <widget class="QDockWidget" name="laserDock">
    <property name="sizePolicy">
@@ -1567,9 +1567,9 @@
     <string>Console</string>
    </property>
   </action>
-  <action name="actionCheck_Update">
+  <action name="actionCheckForUpdates">
    <property name="text">
-    <string>Check Update</string>
+    <string>Check for Updates...</string>
    </property>
   </action>
  </widget>
